--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,24 @@
-# Auto detect text files and perform LF normalization
-* text=auto
+<!DOCTYPE html>
+<html>
+<head>
+<link rel="stylesheet" href="mystyle.css">
+</head>
+<body> 
+    <div class="square1"></div>
+    <div class="square2"></div>
+    <div class="square3"></div>
+    <div class="square4"></div>
+    <div class="square5"></div>
+    <div class="square6"></div>
+    <div class="square7"></div>
+    <div class="square8"></div>
+    <div class="square9"></div>
+    <div class="square10"></div>
+    <div class="square11"></div>
+    <div class="square12"></div>
+    <div class="square13"></div>
+    <div class="square14"></div>
+    <div class="square15"></div>
+    <div class="square16"></div>
+</body>
+</html>
